# WinCatalog

./: .gitignore  AUDIT.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/ai/: mod.rs
src-tauri/src/core/export/: mod.rs
src-tauri/src/core/extractors/: mod.rs  plugins.rs
src-tauri/src/core/hasher/: mod.rs
src-tauri/src/core/jobs/: mod.rs
src-tauri/src/core/rename/: mod.rs
src-tauri/src/core/rules/: mod.rs
src-tauri/src/core/scanner/: kind.rs  mod.rs  parallel.rs  watch.rs
src-tauri/src/core/thumbs/: mod.rs  office.rs
src-tauri/src/core/volume_watcher/: mod.rs
src-tauri/src/db/: mod.rs  pragmas.rs  queries.rs
src-tauri/src/db/migrations/: 001_init.sql
src/api/: tauri.ts
src/app/: App.tsx  global.css  main.tsx  theme.ts
src/components/: DashboardWidgets.tsx  Inspector.tsx  StatusBar.tsx  TimelineView.tsx
src/components/Inspector/: AudioWaveform.tsx  GpsMiniMap.tsx  ImageHistogram.tsx
src/components/Viewer/: ImageViewer.tsx
src/drawers/: ActivityDrawer.tsx  FiltersDrawer.tsx  RenameDrawer.tsx  ReportsDrawer.tsx
src/features/dashboard/: DashboardScreen.tsx
src/features/doublons/: DoublonsScreen.tsx
src/features/explorer/: ExplorerScreen.tsx
src/features/scan/: ScanScreen.tsx
src/features/settings/: SettingsScreen.tsx
src/features/tags/: TagsScreen.tsx
src/modals/: CommandPalette.tsx  InsertDiskDialog.tsx  QuickLook.tsx
(+2 files in other folders)
